--- a/css/custom.css
+++ b/css/custom.css
@@ -38,3 +38,7 @@ body {
 .mat {background-color: #2F5AC6;} 
 .tableau {background-color: #850000;}
 .vba {background-color: #ff9800;} 
+
+code {
+    font-family: monospace;
+}
