--- a/css/custom.css
+++ b/css/custom.css
@@ -37,7 +37,9 @@ body {
 .python {background-color: #4CAF50;} 
 .mat {background-color: #2F5AC6;} 
 .tableau {background-color: #850000;}
-.vba {background-color: #ff9800;} 
+.vba {background-color: #cbcbcb;} 
+.c {background-color: #ff9800;} 
+.unity {background-color: #fc2dd4;} 
 
 code {
     font-family: monospace;
